@@ -4,6 +4,8 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.6
 
 	- Documentation updates (STR #2646, STR #2647, STR #2649)
+	- The IPP backend could crash when handling printer errors
+	  (STR #2667)
 	- Multi-file jobs did not print to remote CUPS servers
 	  (STR #2673)
 	- The scheduler did not provide the Apple language ID to
